Fixed Day of the week not correct on mobile

--- a/src/assets/scss/_mobile.scss
+++ b/src/assets/scss/_mobile.scss
@@ -183,12 +183,6 @@
         
                 .cico__square-wrapper {
                     order: 2;
-
-                    .cico__square {
-                        &.disabled__from-another-month {
-                            display: none;
-                        }
-                    }
                 }
         
                 &:first-child {
